v0.0.1: 2018-09-19 -- Initial package release.
v0.0.2: 2018-09-19 -- Initial package release.
v0.0.3: 2018-09-19 -- Initial package release.
v0.0.4: 2018-09-19 -- Initial package release.
v0.0.5: 
		2018-09-26 -- Set pickle protocol to 2 for python 2/3 compatability
v0.0.6: 
		2018-09-04 -- Move hapitime2datetime to hapi.py
		2018-10-04 -- Make hapitime2datetime output datetimes and add tests
		2018-10-04 -- Improve dateticks.py
		2018-10-04 -- Add hapi_demo.ipynb
		2018-10-04 -- Other documentation improvements
v0.0.7: 
		2018-10-06 -- Improve documentation
		2018-10-06 -- Add reader tests
		2018-10-23 -- Improve dateticks and tests
		2018-10-23 -- Add OO interface for plots; add options
		2018-11-27 -- Major refactoring and clean-up
		2018-11-28 -- Add gallery and autoplot plotting options
v0.0.8:
		2018-02-14 -- Same as v0.0.7 but packaging fix
v0.0.9b0:
		2018-03-06 -- Updates to plot API
v0.0.9b1:
		2018-03-06 -- load(res) -> load(res.json()) in util.jsonparse().
		2018-03-06 -- Add tests for more Python versions.
		2018-05-15 -- SSL issue for urlopen.
		2018-05-17 -- Fixes for heatmap and Matplotlib 3.1.
v0.1.0: 2018-05-21 -- Tagged and pip-installable version
v0.1.1b:
		2018-06-06 -- Beta for next version
		2018-06-07 -- Plot improvements
		2019-01-07 -- Address issue #6 (parameter order)
v0.1.1: 2019-01-08 -- Tagged and pip-installable version
v0.1.2b:
		2019-01-08 -- Beta for next version
		2019-01-16 -- Address issues #5 and #7
v0.1.2: 2019-01-16 -- Tagged and pip-installable version
v0.1.3b:
	2019-01-17 -- Correction for subset() when only time param requested